Added some changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>For My Love ❤️</title>
+        <title>Miss uu ❤️</title>
 
         <style>
             body {
@@ -149,7 +149,7 @@
     <body>
         <div class="container">
             <div id="teddy" class="teddy">🧸</div>
-            <div class="board">Ikkaaaa Did you miss me? ❤️</div>
+            <div class="board">Did you miss me? ❤️</div>
 
             <div class="buttons">
                 <button id="yesBtn">Yes 😍</button>
