--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div style="font-size: 120px">🧸💖</div>
             <div class="celebrationText">
                 I KNEW IT 😍❤️<br />
-                Miss you too My Love 💕
+                Miss you too My dear 💕
             </div>
         </div>
 
